--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "ipywidgets>=8.1.5",
     "langchain>=0.3.19",
     "langchain-openai>=0.3.7",
     "python-dotenv>=1.0.1",
+    "torch>=2.6.0",
+    "transformers>=4.49.0",
 ]
