--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "dotenv>=0.9.9",
     "ipywidgets>=8.1.5",
     "langchain>=0.3.19",
     "langchain-openai>=0.3.7",
