--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,13 @@ dependencies = [
     "dotenv>=0.9.9",
     "ipywidgets>=8.1.5",
     "langchain>=0.3.19",
+    "langchain-anthropic>=0.3.9",
+    "langchain-community>=0.3.18",
+    "langchain-deepseek>=0.1.2",
     "langchain-openai>=0.3.7",
+    "langgraph>=0.3.5",
+    "langsmith>=0.3.11",
     "python-dotenv>=1.0.1",
-    "torch>=2.6.0",
+    "tavily-python>=0.5.1",
     "transformers>=4.49.0",
 ]
