--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "langchain-anthropic>=0.3.9",
     "langchain-community>=0.3.18",
     "langchain-deepseek>=0.1.2",
+    "langchain-google-genai>=2.1.1",
     "langchain-openai>=0.3.7",
     "langgraph>=0.3.5",
     "langsmith>=0.3.11",
@@ -21,5 +22,6 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "langgraph-cli[inmem]>=0.1.80",
     "python-dotenv[cli]>=1.0.1",
 ]
