--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "anthropic>=0.49.0",
     "dotenv>=0.9.9",
+    "httpx>=0.28.1",
     "ipywidgets>=8.1.5",
     "langchain>=0.3.19",
     "langchain-anthropic>=0.3.9",
@@ -15,7 +17,10 @@ dependencies = [
     "langchain-openai>=0.3.7",
     "langgraph>=0.3.5",
     "langsmith>=0.3.11",
+    "mcp[cli]>=1.6.0",
     "python-dotenv>=1.0.1",
+    "redis>=5.2.1",
+    "streamlit>=1.44.1",
     "tavily-python>=0.5.1",
     "transformers>=4.49.0",
 ]
